[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }

# SQLite database
sqlx = { version = "0.7", features = ["sqlite", "uuid", "chrono", "runtime-tokio-native-tls"] }
once_cell = "1.19"

# OpenAPI + Swagger UI
utoipa = { version = "3.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
